跨进程跳转已完成

--- a/kingowebview/src/main/assets/demo.html
+++ b/kingowebview/src/main/assets/demo.html
@@ -13,40 +13,43 @@
          margin: 0 auto;
          text-align: center;
          background-color: #999999;
-         margin-top: 20px;
+         margin-top: 20px;x
          }
-
     </style>
     <script>
         function callAppToast(){
-        console.log("callAppToast.");
-        xiangxuejs.takeNativeAction("showToast", {message: "this is a message from html."});
+            console.log("callAppToast.");
+            kingojs.takeNativeAction("showToast", {message: "this is a message from html."});
         }
         function openActivityA(){
-        console.log("openActivityA.");
-        xiangxuejs.takeNativeAction("openPage", {target_class:
-        "com.lsy.webview.MainProcessTestActivity"});
+            console.log("openActivityA.");
+            kingojs.takeNativeAction("openPage", {target_class: "com.lsy.webviewassembly.MainProcessTestActivity"});
         }
         function openActivityB(){
-        console.log("openActivityA.");
-        xiangxuejs.takeNativeAction("openPage", {target_class:
-        "com.lsy.webview.MainProcessTestActivityB"});
+            console.log("openActivityA.");
+            kingojs.takeNativeAction("openPage", {target_class: "com.lsy.webviewassembly.MainProcessTestActivityB"});
         }
         function login(){
-        console.log("login.");
-        xiangxuejs.takeNativeActionWithCallback("login", {}, function(res) {
-        var element = document.createElement("div");
-        element.appendChild(document.createTextNode("userName: "+res.accountName));
-        document.getElementById('login_id').appendChild(element);
-        });
+            console.log("login.");
+            kingojs.takeNativeActionWithCallback("login", {}, function(res) {
+                 var element = document.createElement("div");
+                 element.appendChild(document.createTextNode("userName: "+res.accountName));
+                 document.getElementById('login_id').appendChild(element);
+            });
         }
     </script>
-    <script src="js/xiangxuejs.js" charset="utf-8"></script>
+    <script src="js/kingojs.js" charset="utf-8"></script>
 </head>
 <body style="height: 100%;">
-<div class="item" style="font-size: 20px; color: #ffffff" onclick="callAppToast()">调用: showToast</div>
-<div class="item" style="font-size: 20px; color: #ffffff" onclick="openActivityA()">打开MainProcessTestActivity</div>
-<div class="item" style="font-size: 20px; color: #ffffff" onclick="openActivityB()">打开另外一个主进程的activity</div>
-<div id="login_id" class="item" style="font-size: 20px; color: #ffffff" onclick="login()">登录并且返回结果</div>
+<div class="item" style="font-size: 20px; color: #ffffff" onclick="callAppToast()">调用: showToast
+</div>
+<div class="item" style="font-size: 20px; color: #ffffff" onclick="openActivityA()">
+    打开MainProcessTestActivity
+</div>
+<div class="item" style="font-size: 20px; color: #ffffff" onclick="openActivityB()">
+    打开另外一个主进程的activity
+</div>
+<div id="login_id" class="item" style="font-size: 20px; color: #ffffff" onclick="login()">登录并且返回结果
+</div>
 </body>
 </html>
